@@ -1,7 +1,5 @@
 MODULES=(fuse)
 BINARIES=(jq mount.ntfs)
 HOOKS=(base udev memdisk sysrescuecfg findroot archiso archiso_loop_mnt archiso_pxe_common archiso_pxe_nbd archiso_pxe_http archiso_pxe_nfs archiso_kms block mdadm_udev modconf encrypt lvm2 filesystems keyboard)
-COMPRESSION_RELEASE="xz"
-COMPRESSION_OPTIONS_RELEASE="--threads=0 --lzma2=preset=9e,dict=128MiB --verbose"
-COMPRESSION_DEVEL="zstd"
-COMPRESSION_OPTIONS_DEVEL="--threads=0 --fast --verbose"
+COMPRESSION="xz"
+COMPRESSION_OPTIONS="--threads=0 --verbose"
